@@ -51,6 +51,7 @@ glong         my_strlen                               ( const gchar *str );
 
 gchar        *my_utils_quote_single                   ( const gchar *str );
 gchar        *my_utils_quote_double                   ( const gchar *str );
+gchar        *my_utils_unquote_double                 ( const gchar *str );
 
 GTimeVal     *my_utils_stamp_set_now                  ( GTimeVal *stamp );
 GTimeVal     *my_utils_stamp_set_from_sql             ( GTimeVal *timeval, const gchar *str );
