@@ -46,6 +46,7 @@
    - mySettings: migrate to G_ADD_PRIVATE (todo #994).
    - my_utils_quote() is renamed to my_utils_quote_single().
    - my_utils_quote_double(): new function.
+   - my_utils_unquote_double(): new function.
    - my_utils_window_restore_position(): now returns %TRUE is a position has been restored.
    - ofaButtonsBox: migrate to G_ADD_PRIVATE (todo #994).
    - ofaDateFilterHVBin: migrate to G_ADD_PRIVATE (todo #994).
